# Test-LEB_matrix_ESP-IDF_LVGL

./: .gitignore  CMakeLists.txt  sdkconfig
components/test/Ctest/: CMakeLists.txt
components/test/Ctest/include/: sp_manager.h
components/test/Ctest/src/: main.c  sp_manager.c
components/test/Mase_Test/: CMakeLists.txt  sdkconfig
components/test/Mase_Test/main/: PMW3360.cpp  PMW3360.h  tusb_hid_example_main.c
components/test/MiniGen12bits_minos_v3/: .cproject  .project  MiniGen Debug.launch  MiniGen Release.launch  MiniGen12bits_sujet Debug.launch  MiniGen12bits_sujet Release.launch
components/test/MiniGen12bits_minos_v3/Debug/: MiniGen.axf  MiniGen.map  MiniGen_Debug.ld  MiniGen_Debug_lib.ld  MiniGen_Debug_mem.ld  makefile
components/test/MiniGen12bits_minos_v3/Release/: MiniGen.axf  MiniGen.hex  MiniGen.map  MiniGen10bits.axf  MiniGen10bits.hex  MiniGen10bits.map  MiniGen12bits_minos.axf  MiniGen12bits_minos.hex  MiniGen12bits_minos.map  MiniGen12bits_minos_v2.axf  MiniGen12bits_minos_v2.hex  MiniGen12bits_minos_v2.map  MiniGen12bits_minos_v3.axf  MiniGen12bits_minos_v3.hex  MiniGen12bits_minos_v3.map  MiniGen12bits_sujet.axf  MiniGen12bits_sujet.hex  MiniGen12bits_sujet.map  MiniGen_Release.ld  MiniGen_Release_lib.ld  MiniGen_Release_library.ld  MiniGen_Release_mem.ld  MiniGen_Release_memory.ld  makefile
components/test/MiniGen12bits_minos_v3/src/: MemoryFileSystem.c  MemoryFileSystem.h  SPI_W25Qxx.c  SPI_W25Qxx.h  SpiDac.c  SpiDac.h  main.c  uart.c  uart.h
main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.cpp
(+65 files in other folders)
